--- a/FrostPoint_Pred.ipynb
+++ b/FrostPoint_Pred.ipynb
@@ -550,6 +550,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fe0add9",
+   "metadata": {},
+   "source": [
+    "We take the previous year to add the missing value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "0ccfd5d0",
@@ -595,6 +603,14 @@
     "    result_temp - 273.15\n",
     ")\n",
     "result_temp.rename(columns={\"Average temperature (K)\": \"Average temperature (°C)\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a21e606",
+   "metadata": {},
+   "source": [
+    "We have the prediction for Frost point (°C) so we are going to see the day where Temperature is lower than the frost point"
    ]
   },
   {
@@ -646,6 +662,14 @@
     "# If frost continues until the final date\n",
     "if current_start is not None:\n",
     "    frost_periods.append((current_start, result_frostpoint.index[-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2af0372",
+   "metadata": {},
+   "source": [
+    "As we can see next yeuars they will be just few day with frost"
    ]
   },
   {
@@ -710,6 +734,14 @@
     "\n",
     "for start, end, duration in long_frost_periods:\n",
     "    print(f\"- From {start.date()} to {end.date()}  ({duration} days)\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfed3ac9",
+   "metadata": {},
+   "source": [
+    "This to period are the more to procupate because of the duration"
    ]
   }
  ],
